--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="C:\Users\Sakshi Raj\Downloads\sr_logo1-removebg-preview.png" class="logo">
+            <img src="sr_logo1-removebg-preview.png" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -27,7 +27,7 @@
             <a href="#">DOWNlOAD CV</a>
         </div>
         <div class="images">
-            <img src="D:\my_Pic\okayy11-55.jpg" class="mee">
+            <img src="okayy11-55.jpg" class="mee">
         </div>
     </div>
 </body>
