--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <div class="hero">
         <nav>
             <img src="sr_logo1-removebg-preview.png" class="logo">
@@ -30,5 +31,6 @@
             <img src="okayy11-55.jpg" class="mee">
         </div>
     </div>
+    </header>
 </body>
 </html>
